--- a/site/package.json
+++ b/site/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@nanostores/preact": "^0.5.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-table": "^8.19.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "lucide-react": "^0.401.0",
     "nanostores": "^0.10.3",
     "pocketbase": "^0.21.3",
