--- a/site/package.json
+++ b/site/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nanostores/preact": "^0.5.1",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
