--- a/site/package.json
+++ b/site/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.19.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -22,19 +23,19 @@
     "lucide-react": "^0.401.0",
     "nanostores": "^0.10.3",
     "pocketbase": "^0.21.3",
-    "preact": "^10.22.0",
+    "preact": "^10.22.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "valibot": "^0.36.0",
     "wouter-preact": "^3.3.1"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.8.2",
+    "@preact/preset-vite": "^2.8.3",
     "@types/bun": "^1.1.6",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3"
   }
 }
