--- a/site/package.json
+++ b/site/package.json
@@ -9,29 +9,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nanostores/preact": "^0.5.1",
+    "@nanostores/react": "^0.7.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.19.2",
+    "@vitejs/plugin-react": "^4.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.401.0",
     "nanostores": "^0.10.3",
     "pocketbase": "^0.21.3",
-    "preact": "^10.22.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "valibot": "^0.36.0",
-    "wouter-preact": "^3.3.1"
+    "wouter": "^3.3.1"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.8.3",
     "@types/bun": "^1.1.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
