--- a/site/package.json
+++ b/site/package.json
@@ -26,6 +26,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "d3-scale": "^4.0.2",
+    "d3-time": "^3.1.0",
     "lucide-react": "^0.407.0",
     "nanostores": "^0.10.3",
     "pocketbase": "^0.21.3",
