combine hub and agent repos

--- a/hub/dockerfile
+++ b/hub/dockerfile
@@ -11,7 +11,7 @@ COPY migrations ./migrations
 
 # Build
 ARG TARGETOS TARGETARCH
-RUN CGO_ENABLED=0 GOOS=$TARGETOS GOARCH=$TARGETARCH go build -ldflags "-w -s" -o /server .
+RUN CGO_ENABLED=0 GOOS=$TARGETOS GOARCH=$TARGETARCH go build -ldflags "-w -s" -o /beszel .
 
 # ? -------------------------
 FROM alpine:latest
