--- a/hub/site/package.json
+++ b/hub/site/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nanostores/react": "^0.7.2",
     "@nanostores/router": "^0.15.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
