--- a/beszel/dockerfile_Hub
+++ b/beszel/dockerfile_Hub
@@ -4,7 +4,7 @@ WORKDIR /app
 
 # Download Go modules
 COPY go.mod go.sum ./
-# RUN go mod download
+RUN go mod download
 
 # Copy source files
 COPY *.go ./
