use GOGC=75 for docker images

--- a/beszel/dockerfile_Agent
+++ b/beszel/dockerfile_Agent
@@ -10,7 +10,7 @@ COPY internal ./internal
 
 # Build
 ARG TARGETOS TARGETARCH
-RUN CGO_ENABLED=0 GOOS=$TARGETOS GOARCH=$TARGETARCH go build -ldflags "-w -s" -o /agent ./cmd/agent
+RUN CGO_ENABLED=0 GOGC=75 GOOS=$TARGETOS GOARCH=$TARGETARCH go build -ldflags "-w -s" -o /agent ./cmd/agent
 
 # ? -------------------------
 FROM scratch
