--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "NODE_ENV=production vite",
+		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
