--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -9,9 +9,11 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@henrygd/queue": "^1.0.7",
 		"@nanostores/react": "^0.7.3",
 		"@nanostores/router": "^0.11.0",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
+		"@radix-ui/react-checkbox": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
@@ -20,6 +22,7 @@
 		"@radix-ui/react-slider": "^1.2.1",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-switch": "^1.1.1",
+		"@radix-ui/react-tabs": "^1.1.1",
 		"@radix-ui/react-toast": "^1.2.2",
 		"@radix-ui/react-tooltip": "^1.1.3",
 		"@tanstack/react-table": "^8.20.5",
@@ -29,7 +32,7 @@
 		"cmdk": "^1.0.0",
 		"d3-time": "^3.1.0",
 		"lucide-react": "^0.452.0",
-		"nanostores": "^0.10.3",
+		"nanostores": "^0.11.3",
 		"pocketbase": "^0.21.5",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -47,5 +50,10 @@
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
 		"vite": "^5.4.9"
+	},
+	"overrides": {
+		"@nanostores/router": {
+			"nanostores": "^0.11.3"
+		}
 	}
 }
