--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -31,11 +31,14 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"d3-time": "^3.1.0",
+		"i18next": "^23.16.4",
+		"i18next-browser-languagedetector": "^8.0.0",
 		"lucide-react": "^0.452.0",
 		"nanostores": "^0.11.3",
 		"pocketbase": "^0.21.5",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-i18next": "^15.1.0",
 		"recharts": "^2.13.0",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
