add `@esbuild/linux-arm64` as optional dependency

--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -58,5 +58,8 @@
 		"@nanostores/router": {
 			"nanostores": "^0.11.3"
 		}
+	},
+	"optionalDependencies": {
+		"@esbuild/linux-arm64": "^0.21.5"
 	}
 }
