--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -15,6 +15,7 @@
 		"@radix-ui/react-alert-dialog": "^1.1.2",
 		"@radix-ui/react-checkbox": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-direction": "^1.1.0",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-select": "^2.1.2",
@@ -50,6 +51,7 @@
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.47",
 		"tailwindcss": "^3.4.14",
+		"tailwindcss-rtl": "^0.9.0",
 		"typescript": "^5.6.3",
 		"vite": "^5.4.9"
 	},
