--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -6,10 +6,15 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"sync": "lingui extract --overwrite && lingui compile",
+		"sync_and_purge": "lingui extract --overwrite --clean && lingui compile"
 	},
 	"dependencies": {
 		"@henrygd/queue": "^1.0.7",
+		"@lingui/detect-locale": "^4.13.0",
+		"@lingui/macro": "^4.13.0",
+		"@lingui/react": "^4.13.0",
 		"@nanostores/react": "^0.7.3",
 		"@nanostores/router": "^0.11.0",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
@@ -27,27 +32,28 @@
 		"@radix-ui/react-toast": "^1.2.2",
 		"@radix-ui/react-tooltip": "^1.1.3",
 		"@tanstack/react-table": "^8.20.5",
-		"@vitejs/plugin-react": "^4.3.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"d3-time": "^3.1.0",
-		"i18next": "^23.16.4",
 		"lucide-react": "^0.452.0",
 		"nanostores": "^0.11.3",
 		"pocketbase": "^0.21.5",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-i18next": "^15.1.0",
 		"recharts": "^2.13.0",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
 		"valibot": "^0.36.0"
 	},
 	"devDependencies": {
+		"@lingui/cli": "^4.13.0",
+		"@lingui/swc-plugin": "^4.1.0",
+		"@lingui/vite-plugin": "^4.13.0",
 		"@types/bun": "^1.1.11",
 		"@types/react": "^18.3.11",
 		"@types/react-dom": "^18.3.1",
+		"@vitejs/plugin-react-swc": "^3.7.1",
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.47",
 		"tailwindcss": "^3.4.14",
