--- a/i18n.yml
+++ b/i18n.yml
@@ -1,3 +1,4 @@
 files:
   - source: /beszel/site/src/locales/en/messages.po
-    translation: /folder/%two_letters_code%/%original_file_name%
+    translation: /beszel/site/src/locales/%two_letters_code%/%original_file_name%
+    multilingual: 1
