--- a/i18n.yml
+++ b/i18n.yml
@@ -1,5 +1,3 @@
 files:
-  - source: /beszel/site/src/locales/en/messages.po
-    translation: /beszel/site/src/locales/%two_letters_code%/%original_file_name%
-    multilingual: 1
-
+  - source: /beszel/site/src/locales/en/en.po
+    translation: /beszel/site/src/locales/%two_letters_code%/%two_letters_code%.po
