add dev tasks to makefile

--- a/beszel/Makefile
+++ b/beszel/Makefile
@@ -4,8 +4,15 @@ ARCH ?= $(shell go env GOARCH)
 # Skip building the web UI if true
 SKIP_WEB ?= false
 
-.PHONY: tidy build-agent build-hub build clean lint
+.PHONY: tidy build-agent build-hub build clean lint dev-server dev-agent dev-hub dev
 .DEFAULT_GOAL := build
+
+clean:
+	go clean
+	rm -rf ./build
+
+lint:
+	golangci-lint run
 
 tidy:
 	go mod tidy
@@ -27,9 +34,27 @@ build-hub: tidy $(if $(filter false,$(SKIP_WEB)),build-web-ui)
 
 build: build-agent build-hub
 
-clean:
-	go clean
-	rm -rf ./build
+dev-server:
+	cd ./site
+	@if command -v bun >/dev/null 2>&1; then \
+		cd ./site && bun install && bun run dev; \
+	else \
+		cd ./site && npm install && npm run dev; \
+	fi
 
-lint:
-	golangci-lint run
+dev-hub:
+	@if command -v entr >/dev/null 2>&1; then \
+		find ./cmd/hub/*.go ./internal/{alerts,hub,records,users}/*.go | entr -r -s "cd ./cmd/hub && go run . serve"; \
+	else \
+		cd ./cmd/hub && go run . serve; \
+	fi
+
+dev-agent:
+	@if command -v entr >/dev/null 2>&1; then \
+		find ./cmd/agent/*.go ./internal/agent/*.go | entr -r go run beszel/cmd/agent; \
+	else \
+		go run beszel/cmd/agent; \
+	fi
+
+# KEY="..." make -j dev
+dev: dev-server dev-hub dev-agent
