add fakenet to all compose files

--- a/supplemental/docker/agent/docker-compose.yml
+++ b/supplemental/docker/agent/docker-compose.yml
@@ -3,11 +3,24 @@ services:
     image: 'henrygd/beszel-agent'
     container_name: 'beszel-agent'
     restart: unless-stopped
-    network_mode: host
+    ports:
+      - 45876:45876
     volumes:
+      - procnet:/dev/shm/fakenet
       - /var/run/docker.sock:/var/run/docker.sock:ro
       # monitor other disks / partitions by mounting a folder in /extra-filesystems
       # - /mnt/disk/.beszel:/extra-filesystems/sda1:ro
     environment:
       PORT: 45876
       KEY: 'ssh-ed25519 YOUR_PUBLIC_KEY'
+
+  beszel-fakenet:
+    image: henrygd/beszel-fakenet
+    container_name: fakenet
+    restart: unless-stopped
+    network_mode: host
+    volumes:
+      - procnet:/dev/shm/fakenet
+
+volumes:
+  procnet: {}
