--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -18,7 +18,7 @@ jobs:
           - image: henrygd/beszel-agent
             context: ./beszel
             dockerfile: ./beszel/dockerfile_Agent
-          - image: henrygd/beszel-agent-fakenet
+          - image: henrygd/beszel-fakenet
             context: ./beszel
             dockerfile: ./beszel/dockerfile_Fakenet
     permissions:
