--- a/beszel/.goreleaser.yml
+++ b/beszel/.goreleaser.yml
@@ -10,8 +10,8 @@ builds:
   - id: beszel
     binary: beszel
     main: cmd/hub/hub.go
-    env:
-      - CGO_ENABLED=0
+    # env:
+    #   - CGO_ENABLED=0
     goos:
       - linux
       - darwin
@@ -23,8 +23,8 @@ builds:
   - id: beszel-agent
     binary: beszel-agent
     main: cmd/agent/agent.go
-    env:
-      - CGO_ENABLED=0
+    # env:
+    #   - CGO_ENABLED=0
     goos:
       - linux
       - darwin
@@ -59,6 +59,9 @@ archives:
     # format_overrides:
     #   - goos: windows
     #     format: zip
+
+release:
+  draft: true
 
 changelog:
   disable: true
