--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,11 @@
 blank_issues_enabled: false
 contact_links:
-  - name: GitHub Community Support
-    url: https://github.com/orgs/community/discussions
-    about: Please ask and answer questions here.
-  - name: GitHub Security Bug Bounty
-    url: https://bounty.github.com/
-    about: Please report security vulnerabilities here.
+  - name: 💬 Support and questions
+    url: https://github.com/henrygd/beszel/discussions
+    about: Ask and answer questions here.
+  - name: ℹ️ View the Common Issues page
+    url: https://beszel.dev/guide/common-issues
+    about: Find information about commonly encountered problems.
+  - name: 🔐 Report a security vulnerability
+    url: https://github.com/henrygd/beszel/security/advisories/new
+    about: You can open an issue if the vulnerability is low severity.
