config(issues): Remove alternatives field in feature request

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -15,9 +15,4 @@ body:
     attributes:
       label: Describe how you would like to see this feature implemented
     validations:
-      required: false
-  - type: textarea
-    attributes:
-      label: Describe any alternatives you've considered
-    validations:
-      required: false
+      required: true
