- Add prerm script to stop and disable service - Add security/sandboxing options to systemd unit
Signed-off-by: Daniel Lo Nigro <git@d.sb>

--- a/beszel/.goreleaser.yml
+++ b/beszel/.goreleaser.yml
@@ -98,6 +98,7 @@ nfpms:
         packager: deb
     scripts:
       postinstall: ../supplemental/debian/postinstall.sh
+      preremove: ../supplemental/debian/prerm.sh
       postremove: ../supplemental/debian/postrm.sh
     deb:
       predepends:
