--- a/beszel/.goreleaser.yml
+++ b/beszel/.goreleaser.yml
@@ -10,8 +10,8 @@ builds:
   - id: beszel
     binary: beszel
     main: cmd/hub/hub.go
-    # env:
-    #   - CGO_ENABLED=0
+    env:
+      - CGO_ENABLED=0
     goos:
       - linux
       - darwin
@@ -23,8 +23,8 @@ builds:
   - id: beszel-agent
     binary: beszel-agent
     main: cmd/agent/agent.go
-    # env:
-    #   - CGO_ENABLED=0
+    env:
+      - CGO_ENABLED=0
     goos:
       - linux
       - darwin
@@ -84,8 +84,9 @@ nfpms:
       - beszel-agent
     formats:
       - deb
-    dependencies:
-      - libc6
+    # don't think this is needed with CGO_ENABLED=0
+    # dependencies:
+    #   - libc6
     contents:
       - src: ../supplemental/debian/beszel-agent.service
         dst: lib/systemd/system/beszel-agent.service
