--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "beszel",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.10.1",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -12,9 +12,10 @@
 	},
 	"dependencies": {
 		"@henrygd/queue": "^1.0.7",
-		"@lingui/detect-locale": "^4.14.1",
-		"@lingui/macro": "^4.14.1",
-		"@lingui/react": "^4.14.1",
+		"@henrygd/semaphore": "^0.0.2",
+		"@lingui/detect-locale": "^5.2.0",
+		"@lingui/macro": "^5.2.0",
+		"@lingui/react": "^5.2.0",
 		"@nanostores/react": "^0.7.3",
 		"@nanostores/router": "^0.11.0",
 		"@radix-ui/react-alert-dialog": "^1.1.6",
@@ -48,7 +49,7 @@
 	},
 	"devDependencies": {
 		"@lingui/cli": "^5.2.0",
-		"@lingui/swc-plugin": "^5.4.0",
+		"@lingui/swc-plugin": "^5.5.0",
 		"@lingui/vite-plugin": "^5.2.0",
 		"@types/bun": "^1.2.4",
 		"@types/react": "^18.3.1",
