ci: update GitHub workflows to use new Docker image names and correct token secret
Update the Docker image names in the docker-images.yml workflow from 'henrygd/beszel' and 'henrygd/beszel-agent' to 'nguyendkn/cmonitor' and 'nguyendkn/cmonitor-agent'. Also, corrected the GITHUB_TOKEN secret reference in the release.yml workflow to use the correct secret name.

--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -12,13 +12,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - image: henrygd/beszel
+          - image: nguyendkn/cmonitor
             context: ./beszel
             dockerfile: ./beszel/dockerfile_Hub
             registry: docker.io
             username_secret: DOCKERHUB_USERNAME
             password_secret: DOCKERHUB_TOKEN
-          - image: henrygd/beszel-agent
+          - image: nguyendkn/cmonitor-agent
             context: ./beszel
             dockerfile: ./beszel/dockerfile_Agent
             registry: docker.io
