chore: update build dependencies and locale files
Updated pnpm-workspace.yaml to ignore specific build dependencies. Modified the build script in package.json to use npx for lingui commands. Added @lingui/core dependency and updated locale files to reflect changes in system.tsx line numbers. Fixed GITHUB_TOKEN formatting in release.yml.

--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "lingui extract --overwrite && lingui compile && vite build",
+		"build": "npx lingui extract --overwrite && npx lingui compile && vite build",
 		"preview": "vite preview",
 		"sync": "lingui extract --overwrite && lingui compile",
 		"sync_and_purge": "lingui extract --overwrite --clean && lingui compile"
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@henrygd/queue": "^1.0.7",
 		"@henrygd/semaphore": "^0.0.2",
+		"@lingui/core": "^5.3.1",
 		"@lingui/detect-locale": "^5.2.0",
 		"@lingui/macro": "^5.2.0",
 		"@lingui/react": "^5.2.0",
