refactor: rename 'beszel' to 'cmonitor' across the codebase
Update all instances of 'beszel' to 'cmonitor' in file paths, variable names, and configurations. This includes changes to docker-compose.yml, .gitignore, migrations, Kubernetes deployment files, and installation scripts. Additionally, add new locale files for multiple languages to support internationalization.

--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,17 @@ pb_data
 data
 temp
 .vscode
-beszel-agent
-beszel_data
-beszel_data*
+cmonitor-agent
+cmonitor_data
+cmonitor_data*
 dist
 *.exe
-beszel/cmd/hub/hub
-beszel/cmd/agent/agent
+cmonitor/cmd/hub/hub
+cmonitor/cmd/agent/agent
 node_modules
-beszel/build
+cmonitor/build
 *timestamp*
 .swc
-beszel/site/src/locales/**/*.ts
+cmonitor/site/src/locales/**/*.ts
 *.bak
 __debug_*
